--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: inherit;
     background-color: #f0f0f0;
     margin: 0;
     display: flex;
@@ -33,7 +33,8 @@ img {
 }
 
 button {
-    background-color: #008cba;
+    font-family: inherit;
+    background-color: #7c5e99;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -41,4 +42,12 @@ button {
     cursor: pointer;
     border-radius: 20px;
     transition: background-color 0.6s ease;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 100%;
+}
+
+input {
+    
 }
