--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: inherit;
+    font-family: sans-serif;
     background-color: #f0f0f0;
     margin: 0;
     display: flex;
@@ -40,7 +40,7 @@ button {
     padding: 10px 20px;
     font-size: 1em;
     cursor: pointer;
-    border-radius: 20px;
+    border-radius: 10px;
     transition: background-color 0.6s ease;
     display: block;
     margin-right: auto;
@@ -49,5 +49,31 @@ button {
 }
 
 input {
+    margin-bottom: auto;
+    width: 110px;
+    height: 25%;
+    border-radius: 4px;
+    border: 4px solid #977a96;
+    box-shadow: 4px 4px 0px #6e5a5a;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    padding: 0px;
+    font-size: 100%;
+    font-family: inherit;
+    font-size: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.btn{
+    border: 1px solid #977a96;
+    background-color: none;
+    padding:  10px 20px;
     
 }
+
+button:hover {
+    background-color: #977a96;
+    transition: opacity 23ms;
+    }
