--- a/style.css
+++ b/style.css
@@ -33,28 +33,48 @@ img {
 }
 
 button {
-    font-family: inherit;
-    background-color: #7c5e99;
-    color: white;
+    color: #523d57;
     border: none;
-    padding: 10px 20px;
-    font-size: 1em;
+    height: 40px;
+    width: 150px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border-radius: 30px;
     cursor: pointer;
-    border-radius: 10px;
-    transition: background-color 0.6s ease;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: 100%;
+    border: 2px solid #7c5e99;
+    box-shadow: -3px -3px 5px #ddbce4;
+    text-align: center;
+    position: relative;
+    line-height: normal;
 }
 
+button::before{
+    content: "";
+    height: 100%;
+    width: 10%;
+    top:0;
+    left: 0;
+    background: transparent;
+    border-radius: 30px;
+    transition: 0.5s;
+    position: absolute;
+    z-index: 0;
+}
+
+button:hover::before{
+    background-color: #977a96;
+    width: 100%;
+    opacity: 0.40;
+    }
+
+
 input {
-    margin-bottom: auto;
+    margin-top: 10px;
     width: 110px;
     height: 25%;
     border-radius: 4px;
     border: 4px solid #977a96;
-    box-shadow: 4px 4px 0px #6e5a5a;
+    box-shadow: 4px 4px 0px #ddbce4;
     margin-right: auto;
     margin-left: auto;
     display: block;
@@ -65,15 +85,3 @@ input {
     padding-left: 5px;
     padding-right: 5px;
 }
-
-.btn{
-    border: 1px solid #977a96;
-    background-color: none;
-    padding:  10px 20px;
-    
-}
-
-button:hover {
-    background-color: #977a96;
-    transition: opacity 23ms;
-    }
