adicionado um background com imagem

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: #f0f0f0;
+    background-image: url(/hystria\ dekia.png);
     margin: 0;
     display: flex;
     justify-content: center;
@@ -10,18 +10,17 @@ body {
 
 .container {
     text-align: center;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 0 10px rgba(88, 86, 86, 0.171);
 }
 
 h1{
-    color: #333
+    color: #f8f1f1
 }
 
 p {
-    color: #666;
+    color: #faf8f8;
     font-size: 1.2em;
 }
 
@@ -84,4 +83,8 @@ input {
     font-size: 15px;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+*{
+    cursor: url(/63636.png), auto;
 }
