Arrumado os problemas do conflitos de butão

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img {
     margin: 20px 0;
 }
 
-button {
+div #botao {
     color: #523d57;
     border: none;
     height: 40px;
@@ -47,7 +47,7 @@ button {
     line-height: normal;
 }
 
-button::before{
+div #botao::before{
     content: "";
     height: 100%;
     width: 10%;
@@ -60,12 +60,11 @@ button::before{
     z-index: 0;
 }
 
-button:hover::before{
+div #botao:hover::before{
     background-color: #977a96;
     width: 100%;
     opacity: 0.40;
     }
-
 
 input {
     margin-top: 10px;
@@ -87,4 +86,23 @@ input {
 
 *{
     cursor: url(/63636.png), auto;
+}
+
+div .botao-alterar-tema {
+    width: 30px;
+    transition: 0.2s ease-in-out;
+}
+
+div #botao-alterar-tema {
+    background: none;
+    border: none;
+    cursor: pointer;
+    top: 20px;
+    right: px;
+    position: absolute;
+}
+
+div .botao-alterar-tema:hover {
+    transform: scale(1.07);
+    cursor: pointer;
 }
