--- a/style.css
+++ b/style.css
@@ -113,3 +113,19 @@ div .botao-alterar-tema:hover {
 body.modo-escuro {
     background-image: url(/Wallpaper.jpg);
     }
+
+    .container2 {
+        color: white;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: -1;
+        text-align: center;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0 0 0 10px rgba(88, 86, 86, 0.171);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
